Table "comments" {
  "id" bigint(20) [pk, not null]
  "comment" longtext [not null]
  "post_id" bigint(20) [default: NULL]
  "user_id" bigint(20) [default: NULL]
  "deleted_at" timestamp [default: NULL]
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]
  "parent_id" bigint(20) [default: NULL]
  "unsign_text" longtext [default: NULL, note: 'luu tim kiem khong dau']
}

Table "comment_like" {
  "comment_id" bigint(20) [not null]
  "user_id" bigint(20) [not null]
}

Table "model_has_roles" {
  "role_id" bigint(20) [not null]
  "model_type" varchar(255) [not null]
  "model_id" bigint(20) [not null]
}

Table "permissions" {
  "id" bigint(20) [not null]
  "module" varchar(255) [default: NULL, note: 'Tên chức năng']
  "name" varchar(255) [not null]
  "action" varchar(255) [default: NULL, note: 'Hành động']
  "guard_name" varchar(255) [not null]
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]
}

Table "posts" {
  "id" bigint(20) [pk, not null]
  "title" varchar(255) [not null, note: 'Tiêu đề']
  "description" varchar(255) [default: NULL, note: 'Mô tả']
  "content" longtext [default: NULL, note: 'Nội dung']
  "post_type_id" bigint(20) [default: NULL, note: 'Map voi post_type']
  "link_pdf" varchar(255) [default: NULL, note: 'File đính kèm']
  "status" tinyint(4) [not null, default: 1, note: 'Trạng thái: 1 = Public']
  "user_id" bigint(20) [default: NULL, note: 'Người đăng']
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]
  "unsign_text" longtext [default: NULL, note: 'luu tim kiem khong dau']
}

Table "post_like" {
  "post_id" bigint(20) [not null]
  "user_id" bigint(20) [not null]
}

Table "post_report" {
  "id" bigint(20) [pk, not null]
  "post_id" bigint(20) [default: NULL, note: 'Map voi posts']
  "user_id" bigint(20) [default: NULL, note: 'Map voi users']
  "description" varchar(255) [default: NULL]
  "resolve" tinyint(4) [not null, default: 1, note: '1 => open, 2 => close']
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]
  "unsign_text" longtext [default: NULL, note: 'luu tim kiem khong dau']
}

Table "post_type" {
  "id" bigint(20) [pk, not null]
  "name" varchar(255) [default: NULL]
  "parent_id" bigint(20) [default: NULL, note: 'Danh muc cha neu co']
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]
  "slug" varchar(255) [default: NULL]
}

Table "roles" {
  "id" bigint(20) [pk, not null]
  "name" varchar(255) [not null]
  "guard_name" varchar(255) [not null]
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]
  "unsign_text" longtext [default: NULL, note: 'luu tim kiem khong dau']
}

Table "role_has_permissions" {
  "permission_id" bigint(20) [not null]
  "role_id" bigint(20) [not null]
}

Table "users" {
  "id" bigint(20) [pk, not null]
  "name" varchar(255) [not null]
  "email" varchar(255) [not null]
  "email_verified_at" timestamp [default: NULL]
  "password" password [not null]
  "remember_token" varchar(100) [default: NULL]
  "created_at" timestamp [default: NULL]
  "updated_at" timestamp [default: NULL]
  "unsign_text" longtext [default: NULL, note: 'luu tim kiem khong dau']
}

// Phân quyền
Ref:"roles"."id" < "model_has_roles"."role_id" [delete: cascade]
Ref:"users"."id" < "model_has_roles"."model_id" [delete: cascade]
Ref:"roles"."id" < "role_has_permissions"."role_id" [delete: cascade]
Ref:"permissions"."id" < "role_has_permissions"."permission_id" [delete: cascade]

// Post
Ref:"post_type"."id" < "posts"."post_type_id" [delete: set null]
Ref:"users"."id" < "posts"."user_id" [delete: set null]
Ref:"posts"."id" < "post_like"."post_id" [delete: cascade]
Ref:"users"."id" < "post_like"."user_id" [delete: cascade]
Ref:"posts"."id" < "post_report"."post_id" [delete: cascade]
Ref:"users"."id" < "post_report"."user_id" [delete: cascade]

// Comment
Ref:"comments"."id" < "comments"."parent_id" [delete: cascade]
Ref:"posts"."id" < "comments"."post_id" [delete: cascade]
Ref:"users"."id" < "comments"."user_id" [delete: cascade]
Ref:"comments"."id" < "comment_like"."comment_id" [delete: cascade]
Ref:"users"."id" < "comment_like"."user_id" [delete: cascade]







